update quiz config
